<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.activities.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/layout_bg"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/HomeTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="56dp"
                android:fontFamily="@font/lato"
                android:text="@string/Routes"
                android:textColor="#000000"
                android:textSize="10sp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/DirectionsImageView"
                app:layout_constraintHorizontal_bias="0.475"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/DirectionsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/Directions"
                android:textColor="#000000"
                android:textSize="10sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/SettingsImageView"
                app:layout_constraintStart_toEndOf="@+id/HomeImageView" />

            <TextView
                android:id="@+id/SettingsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:fontFamily="@font/lato"
                android:text="@string/Settings"
                android:textColor="#000000"
                android:textSize="10sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/DirectionsImageView" />

            <ImageView
                android:id="@+id/SettingsImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="60dp"
                android:layout_weight="1"
                app:layout_constraintBottom_toTopOf="@+id/SettingsTV"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/DirectionsImageView"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/settings_icon" />

            <ImageView
                android:id="@+id/HomeImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="60dp"
                android:layout_weight="1"
                app:layout_constraintBottom_toTopOf="@+id/HomeTV"
                app:layout_constraintEnd_toStartOf="@+id/DirectionsImageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/home_icon" />

            <ImageView
                android:id="@+id/DirectionsImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                app:layout_constraintBottom_toTopOf="@+id/DirectionsTV"
                app:layout_constraintEnd_toStartOf="@+id/SettingsImageView"
                app:layout_constraintStart_toEndOf="@+id/HomeImageView"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/place_icon" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>